# flop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/flop/: Flop.h
lib/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  ColorMaps.cpp  ColorMaps.hpp  Flop.cpp  FlopContext.hpp  Fullscreen.cpp  Fullscreen.hpp  Image.cpp  Image.hpp  Kernel.cpp  Kernel.hpp  VMA.cpp  VkGlobals.hpp  imgui.ini
shaders/: BinToHex.cmake  CMakeLists.txt  CSFFilter.hlsl  ColorCompare.hlsl  Common.hlsli  ErrorColorMap.hlsl  FeatureFilter.hlsl  FullscreenVS.hlsl  HexToLib.cmake  Preview.hlsl  Summarize.hlsl  Tonemap.hlsl  YyCxCz.hlsl  flip_kernels.js  imgui.ini
src/: CMakeLists.txt  ImguiVulkan.cpp  Main.cpp  Preview.cpp  Preview.hpp  UI.cpp  UI.hpp
test/: CMakeLists.txt  Test.cpp
